overflow and img width fix

--- a/src/App.css
+++ b/src/App.css
@@ -81,6 +81,10 @@ button:hover {
   border: none;
 }
 
+.mainPage {
+  overflow: hidden;
+}
+
 /* Slider styles */
 
 .slick-dots li button:before {
