--- a/src/components/TwoPhotosSection/two-photos.module.css
+++ b/src/components/TwoPhotosSection/two-photos.module.css
@@ -5,8 +5,20 @@
 }
 
 .img {
-  width: 47em;
+  width: 43vw;
+
   height: 80vh;
+}
+
+.img3,
+.img4 {
+  width: 43vw;
+}
+
+.img1,
+.img2 {
+  width: 35vw;
+  margin: auto;
 }
 
 /* TODO rename img classes according to sections */
@@ -80,6 +92,8 @@
 
 @media all and (max-width: 400px) {
   .img {
+    min-width: 100%;
+
     height: 60vh;
   }
   .img:first-child {
@@ -90,6 +104,7 @@
 @media all and (min-width: 401px) and (max-width: 768px) {
   .img {
     height: 70vh;
+    min-width: 100%;
   }
   .img:first-child {
     margin-bottom: 2em;
@@ -107,9 +122,9 @@
   }
 }
 
-@media all and (min-width: 1024px) {
+/* @media all and (min-width: 1024px) {
   .img {
     width: 43vw;
     height: 80vh;
   }
-}
+} */
